tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/comment-cr.stderr
TOML parse error at line 1, column 45
  |
1 | comment-cr = "Carriage return in comment" # 
a=1
  |                                             ^
expected newline, `#`
